@@ -2,3 +2,6 @@
 	* Initial package creation.
 2016-08-27 Fred Gleason <fredg@paravelsystems.com>
 	* Added a '--clock-address=' argument.
+2016-08-27 Fred Gleason <fredg@paravelsystems.com>
+	* Added a Configuration dialog in 'src/configdialog.cpp' and
+	'src/configdialog.h'.
